# tenctl

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  bootstrap.sh  install.sh  tenctl  tenctl-add  tenctl-audit  tenctl-backup  tenctl-health  tenctl-init  tenctl-list  tenctl-modify  tenctl-remove  tenctl-restore  tenctl-resume  tenctl-suspend  tenctl-usage  tenctl-vyos  uninstall.sh  update.sh
docs/: Makefile  README.md  make.bat  requirements.txt  setup.cfg  setup.local.cfg.example
docs/locale/sr/LC_MESSAGES/: index.po
docs/locale/sr/LC_MESSAGES/admin-guide/: configuration.po  index.po  operations.po
docs/locale/sr/LC_MESSAGES/appendix/: index.po  license.po
docs/locale/sr/LC_MESSAGES/getting-started/: architecture.po  index.po  installation.po  quickstart.po
docs/locale/sr/LC_MESSAGES/reference/: cli-reference.po  error-codes.po  index.po
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css  language-redirect.js
docs/source/_static/js/: mermaid-zoom.js
docs/source/_templates/: language_selector.html
docs/source/admin-guide/: configuration.rst  index.rst  operations.rst
docs/source/appendix/: index.rst  license.rst
docs/source/getting-started/: architecture.rst  index.rst  installation.rst  quickstart.rst
docs/source/reference/: cli-reference.rst  error-codes.rst  index.rst
docs/source/user-guide/: index.rst
docs/source/user-guide/advanced-topics/: backup-restore.rst  examples.rst  index.rst  networking.rst
docs/source/user-guide/tenant-management/: index.rst  lifecycle.rst  monitoring.rst  resources.rst
lib/: common.sh  (+3 more)
(+46 files in other folders)
