[metadata]
name = Proxmox Multi-Tenant Management System
version = 1.0.2
description = Multi-tenant management system for Proxmox VE
license = MIT

[extract_messages]
charset = utf-8

[init_catalog]
domain = sphinx
input_file = build/gettext/index.pot
output_dir = locale

[update_catalog]
domain = sphinx
input_file = build/gettext/index.pot
output_dir = locale
